# donation-receipts

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: build-macos.yml  build-windows.yml  ci.yml
receipts/: __init__.py  app.py  assets.py  backup.py  constants.py  database.py  documents.py  excel_export.py  filters.py  formatting.py  hebrew_numbers.py  models.py  paths.py  system.py
receipts/ui/: __init__.py  dialogs.py  main_window.py  widgets.py
tests/: conftest.py  test_backup.py  test_database.py  test_documents.py  test_filters.py  test_formatting.py  test_hebrew_numbers.py
