[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "donation-receipts"
version = "1.0.0"
description = "Local, offline desktop app for nonprofits to issue and manage in-kind donation receipts."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
keywords = ["nonprofit", "donations", "receipts", "hebrew", "tkinter", "desktop"]
dependencies = [
    "openpyxl>=3.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
    "pyinstaller>=6.0",
]

[project.scripts]
donation-receipts = "receipts.app:main"

[tool.setuptools]
packages = ["receipts", "receipts.ui"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
# A pragmatic, widely-used rule set: pyflakes, pycodestyle, isort, bugbear,
# comprehensions, pyupgrade, and simplify.
select = ["E", "F", "I", "B", "C4", "UP", "SIM"]
ignore = [
    "E501",   # line length is enforced by the formatter, not the linter
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]  # asserts are expected in tests
